# local-chatbot

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: __init__.py  main.py
src/processing/: pdf_data.py  split_chunks.py  vectorstore.py  web_data.py
